--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <h2 class="textHeader">We continue to grow and create.</h2>
         <p class="textParagraph">
           With engaged communities rooting for us to create for them, our organization will continue to grow and change in ways we may never
-          predict. Join us, and help inform what's next.
+          predict. <a href="https://forms.gle/87UkQE92hXFJfov88" target="_blank">Join us</a>, and help inform what's next.
         </p>
         <p>
           If you request our services, please E-Mail us at <a href="mailto:contact@theaceae.org">contact@theaceae.org</a>. Alternatively,
