--- a/index.html
+++ b/index.html
@@ -73,13 +73,18 @@
 
     <!-- Footer of Page -->
     <footer>
-      <a href="https://github.com/theaceaecollective" target="_blank" class="bigLogoLol">
+      <a href="https://github.com/theaceaecollective" target="_blank">
         <img
           src="https://raw.githubusercontent.com/theaceaecollective/.github/refs/heads/main/maintainedby.png"
           alt="Big Theaceae Logo"
           height="48"
         />
       </a>
+      <p>
+        <a href="https://discord.gg/nUeRyRtDYC">Discord</a>
+        •
+        <a href="https://github.com/TheaceaeCollective/theaceae-home">GitHub</a>
+      </p>
     </footer>
   </body>
 </html>
