update meta tags

--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
   <head>
     <!-- Meta tags defines metadata for an HTML document -->
     <meta charset="UTF-8" />
-    <meta name="description" content="theaceae homepage." />
-    <meta name="keywords" content="pptek, home, page, theaceae" />
+    <title>Theaceae Collective</title>
+    <meta name="description" content="We like to create and manage projects for communities you enjoy. Join us." />
+    <meta name="keywords" content="pptek, home, page, theaceae, flowers, music, community, organization, startup" />
     <meta name="author" content="Theaceae Collective" />
+
+    <meta name="og:title" content="Theaceae Collective" />
+    <meta property="og:image" content="https://theaceae.org/assets/media/theaceaeSmileLogo.png" />
+    <meta name="og:description" content="We like to create and manage projects for communities you enjoy. Join us." />
+    <meta name="og:site_name" content="Theaceae Collective" />
+    <meta name="og:type" content="website" />
+
+    <meta name="twitter:title" content="Theaceae Collective" />
+    <meta name="twitter:description" content="We like to create and manage projects for communities you enjoy. Join us." />
+    <meta name="twitter:card" value="summary" />
+    <meta name="twitter:image" content="https://theaceae.org/assets/media/theaceaeSmileLogo.png" />
 
     <!-- Helps with small smart devices so site could be sane -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -13,7 +25,6 @@
     <!-- Page title CSS, and Scripts -->
     <link rel="stylesheet" href="/assets/css/styles.css" />
     <link rel="icon" type="image/x-icon" href="/assets/media/theaceaeSmileLogo.png" />
-    <title>Theaceae Collective</title>
   </head>
 
   <!-- Main body of the page -->
