--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
     <!-- Footer of Page -->
     <footer>
-      <a class="oneHundredCigs" href="https://github.com/theaceaecollective" target="_blank">
+      <a href="https://github.com/theaceaecollective" target="_blank">
         <img
           src="https://raw.githubusercontent.com/theaceaecollective/.github/refs/heads/main/maintainedby.png"
           alt="Big Theaceae Logo"
