--- a/index.html
+++ b/index.html
@@ -92,9 +92,11 @@
         />
       </a>
       <p>
-        <a href="https://discord.gg/nUeRyRtDYC">Discord</a>
+        <a href="https://discord.gg/nUeRyRtDYC" target="_blank">Discord</a>
         •
-        <a href="https://github.com/TheaceaeCollective/theaceae-home">GitHub</a>
+        <a href="https://github.com/TheaceaeCollective/theaceae-home" target="_blank">GitHub</a>
+        •
+        <a href="https://my-store-1034922.creator-spring.com/" target="_blank">Merch</a>
       </p>
     </footer>
   </body>
