--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         •
         <a href="https://github.com/TheaceaeCollective/theaceae-home" target="_blank">GitHub</a>
         •
-        <a href="https://ppmarket-shop.fourthwall.com/" target="_blank">Merch</a>
+        <a href="https://merch.theaceae.org/" target="_blank">Merch</a>
       </p>
     </footer>
   </body>
