--- a/index.html
+++ b/index.html
@@ -1,103 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Meta tags defines metadata for an HTML document -->
-    <meta charset="UTF-8" />
-    <title>Theaceae Collective</title>
-    <meta name="description" content="We like to create and manage projects for communities you enjoy. Join us." />
-    <meta name="keywords" content="pptek, home, page, theaceae, flowers, music, community, organization, startup" />
-    <meta name="author" content="Theaceae Collective" />
+    <head>
+        <!-- Meta tags defines metadata for an HTML document -->
+        <meta charset="UTF-8" />
+        <title>Theaceae Collective</title>
+        <meta name="description" content="We like to create and manage projects for communities you enjoy. Join us." />
+        <meta name="keywords" content="pptek, home, page, theaceae, flowers, music, community, organization, startup" />
+        <meta name="author" content="Theaceae Collective" />
 
-    <meta name="og:title" content="Theaceae Collective" />
-    <meta property="og:image" content="https://theaceae.org/assets/media/theaceaeSmileLogo.png" />
-    <meta name="og:description" content="We like to create and manage projects for communities you enjoy. Join us." />
-    <meta name="og:site_name" content="Theaceae Collective" />
-    <meta name="og:type" content="website" />
+        <meta name="og:title" content="Theaceae Collective" />
+        <meta property="og:image" content="https://theaceae.org/assets/media/theaceaeSmileLogo.png" />
+        <meta name="og:description" content="We like to create and manage projects for communities you enjoy. Join us." />
+        <meta name="og:site_name" content="Theaceae Collective" />
+        <meta name="og:type" content="website" />
 
-    <meta name="twitter:title" content="Theaceae Collective" />
-    <meta name="twitter:description" content="We like to create and manage projects for communities you enjoy. Join us." />
-    <meta name="twitter:card" value="summary" />
-    <meta name="twitter:image" content="https://theaceae.org/assets/media/theaceaeSmileLogo.png" />
+        <meta name="twitter:title" content="Theaceae Collective" />
+        <meta name="twitter:description" content="We like to create and manage projects for communities you enjoy. Join us." />
+        <meta name="twitter:card" value="summary" />
+        <meta name="twitter:image" content="https://theaceae.org/assets/media/theaceaeSmileLogo.png" />
 
-    <!-- Helps with small smart devices so site could be sane -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <!-- Helps with small smart devices so site could be sane -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Page title CSS, and Scripts -->
-    <link rel="stylesheet" href="/assets/css/styles.css" />
-    <link rel="icon" type="image/x-icon" href="/assets/media/theaceaeSmileLogo.png" />
-  </head>
+        <!-- Page title CSS, and Scripts -->
+        <link rel="stylesheet" href="/assets/css/styles.css" />
+        <link rel="icon" type="image/x-icon" href="/assets/media/theaceaeSmileLogo.png" />
+    </head>
 
-  <!-- Main body of the page -->
-  <body>
-    <header>
-      <div class="siteLogo">
-        <a href="index.html"><img id="theaceaeSmileLogo" src="/assets/media/theaceaeSmileLogo.png" alt="theacae logo" /></a>
-      </div>
-    </header>
+    <!-- Main body of the page -->
+    <body>
+        <header>
+            <div class="siteLogo">
+                <a href="index.html"><img id="theaceaeSmileLogo" src="/assets/media/theaceaeSmileLogo.png" alt="theacae logo" /></a>
+            </div>
+        </header>
 
-    <!-- Home page, index.html -->
-    <main>
-      <h1 id="introWords">
-        <p id="introLine1">Welcome to the</p>
-        <p id="introLine2">Theaceae Collective</p>
-        <p id="introLine3">We like to create and manage projects for communities you enjoy.</p>
-      </h1>
+        <!-- Home page, index.html -->
+        <main>
+            <h1 id="introWords">
+                <p id="introLine1">Welcome to the</p>
+                <p id="introLine2">Theaceae Collective</p>
+                <p id="introLine3">We like to create and manage projects for communities you enjoy.</p>
+            </h1>
 
-      <div class="box">
-        <h2 class="textHeader">In the collective, we attract hobbyists who wish to provide for the community they're in.</h2>
-        <p class="textParagraph">
-          Our serious debut started with <span class="italy">Porter Robinson Wiki</span>. A website created for showcasing modular wiki
-          design and easy to use functionality unlike other wiki sites. Although we're just getting started, we're still proud to show what
-          we have so far.
-        </p>
-        <div class="projContainer">
-          <a class="proj" href="https://potaro.wiki/" target="_blank"><img src="/assets/media/potaro.png" />potaro.wiki</a>
-          <div class="proj"><img src="/assets/media/absolutelynothing.png" /><span class="tiny">More to come...</span></div>
-        </div>
-      </div>
+            <div class="box">
+                <h2 class="textHeader">In the collective, we attract hobbyists who wish to provide for the community they're in.</h2>
+                <p class="textParagraph">
+                    Our serious debut started with <span class="italy">Porter Robinson Wiki</span>. A website created for showcasing modular
+                    wiki design and easy to use functionality unlike other wiki sites. Although we're just getting started, we're still
+                    proud to show what we have so far.
+                </p>
+                <div class="projContainer">
+                    <a class="proj" href="https://potaro.wiki/" target="_blank"><img src="/assets/media/potaro.png" />potaro.wiki</a>
+                    <div class="proj"><img src="/assets/media/absolutelynothing.png" /><span class="tiny">More to come...</span></div>
+                </div>
+            </div>
 
-      <div class="box oneHundredCigs">
-        <h2 class="textHeader">We also help start off personal projects.</h2>
-        <p class="textParagraph">
-          We help make personal projects come to life by establishing connections with other developers and having a streamlined way of
-          communication between our team members. We also provide a dirt cheap hosting service thanks to our partners at
-          <a href="https://netrocorp.net/" target="_blank">Netro Corporation</a>.
-        </p>
-        <div class="projContainer">
-          <a class="proj" href="https://yell0w.net/" target="_blank"><img src="/assets/media/yellow.png" />yell0w.net</a>
-          <div class="proj"><img src="/assets/media/absolutelynothing.png" /><span class="tiny">More to come...</span></div>
-        </div>
-      </div>
+            <div class="box oneHundredCigs">
+                <h2 class="textHeader">We also help start off personal projects.</h2>
+                <p class="textParagraph">
+                    We help make personal projects come to life by establishing connections with other developers and having a streamlined
+                    way of communication between our team members. We also provide a dirt cheap hosting service thanks to our partners at
+                    <a href="https://netrocorp.net/" target="_blank">Netro Corporation</a>.
+                </p>
+                <div class="projContainer">
+                    <a class="proj" href="https://yell0w.net/" target="_blank"><img src="/assets/media/yellow.png" />yell0w.net</a>
+                    <a class="proj" href="" target="_blank"><img src="/assets/media/proto-eden.gif" />Coming Soon</a>
+                    <div class="proj"><img src="/assets/media/absolutelynothing.png" /><span class="tiny">More to come...</span></div>
+                </div>
+            </div>
 
-      <div class="box oneHundredCigs">
-        <h2 class="textHeader">We continue to grow and create.</h2>
-        <p class="textParagraph">
-          With engaged communities rooting for us to create for them, our organization will continue to grow and change in ways we may never
-          predict. <a href="https://forms.gle/87UkQE92hXFJfov88" target="_blank">Join us</a>, and help inform what's next.
-        </p>
-        <p>
-          If you request our services, please E-Mail us at <a href="mailto:contact@theaceae.org">contact@theaceae.org</a>. Alternatively,
-          fill out the <a href="https://forms.gle/u4zvoYiJvxnZhc9m6" target="_blank">Google Form</a>.
-        </p>
-      </div>
-    </main>
+            <div class="box oneHundredCigs">
+                <h2 class="textHeader">We continue to grow and create.</h2>
+                <p class="textParagraph">
+                    With engaged communities rooting for us to create for them, our organization will continue to grow and change in ways we
+                    may never predict. <a href="https://forms.gle/87UkQE92hXFJfov88" target="_blank">Join us</a>, and help inform what's
+                    next.
+                </p>
+                <p>
+                    If you request our services, please E-Mail us at <a href="mailto:contact@theaceae.org">contact@theaceae.org</a>.
+                    Alternatively, fill out the <a href="https://forms.gle/u4zvoYiJvxnZhc9m6" target="_blank">Google Form</a>.
+                </p>
+            </div>
+        </main>
 
-    <!-- Footer of Page -->
-    <footer>
-      <a href="https://github.com/theaceaecollective" target="_blank">
-        <img
-          src="https://raw.githubusercontent.com/theaceaecollective/.github/refs/heads/main/maintainedby.png"
-          alt="Big Theaceae Logo"
-          height="48"
-        />
-      </a>
-      <p>
-        <a href="https://discord.gg/nUeRyRtDYC" target="_blank">Discord</a>
-        •
-        <a href="https://github.com/TheaceaeCollective/theaceae-home" target="_blank">GitHub</a>
-        •
-        <a href="https://merch.theaceae.org/" target="_blank">Merch</a>
-      </p>
-    </footer>
-  </body>
+        <!-- Footer of Page -->
+        <footer>
+            <a href="https://github.com/theaceaecollective" target="_blank">
+                <img
+                    src="https://raw.githubusercontent.com/theaceaecollective/.github/refs/heads/main/maintainedby.png"
+                    alt="Big Theaceae Logo"
+                    height="48"
+                />
+            </a>
+            <p>
+                <a href="https://discord.gg/nUeRyRtDYC" target="_blank">Discord</a>
+                •
+                <a href="https://github.com/TheaceaeCollective/theaceae-home" target="_blank">GitHub</a>
+                •
+                <a href="https://merch.theaceae.org/" target="_blank">Merch</a>
+            </p>
+        </footer>
+    </body>
 </html>
