ADD GREEDY BUTTON

--- a/index.html
+++ b/index.html
@@ -93,6 +93,15 @@
                     height="48"
                 />
             </a>
+            <div class="iAmNoodlesForTheFooter">
+                <iframe
+                    src="https://github.com/sponsors/theaceaecollective/button"
+                    title="Sponsor theaceaecollective"
+                    height="32"
+                    width="114"
+                    style="border: 0; border-radius: 6px"
+                ></iframe>
+            </div>
             <p>
                 <a href="https://discord.gg/nUeRyRtDYC" target="_blank">Discord</a>
                 •
