--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
         <!-- Meta tags defines metadata for an HTML document -->
         <meta charset="UTF-8" />
         <title>Theaceae Collective</title>
-        <meta name="description" content="We like to create and manage projects for communities you enjoy. Join us." />
+        <meta name="description" content="Join us in creating and managing projects for communities you enjoy." />
         <meta name="keywords" content="pptek, home, page, theaceae, flowers, music, community, organization, startup" />
         <meta name="author" content="Theaceae Collective" />
 
         <meta name="og:title" content="Theaceae Collective" />
         <meta property="og:image" content="https://theaceae.org/assets/media/theaceaeSmileLogo.png" />
-        <meta name="og:description" content="We like to create and manage projects for communities you enjoy. Join us." />
+        <meta name="og:description" content="Join us in creating and managing projects for communities you enjoy." />
         <meta name="og:site_name" content="Theaceae Collective" />
         <meta name="og:type" content="website" />
 
         <meta name="twitter:title" content="Theaceae Collective" />
-        <meta name="twitter:description" content="We like to create and manage projects for communities you enjoy. Join us." />
+        <meta name="twitter:description" content="Join us in creating and managing projects for communities you enjoy." />
         <meta name="twitter:card" value="summary" />
         <meta name="twitter:image" content="https://theaceae.org/assets/media/theaceaeSmileLogo.png" />
 
@@ -65,7 +65,9 @@
                 </p>
                 <div class="projContainer">
                     <a class="proj" href="https://yell0w.net/" target="_blank"><img src="/assets/media/yellow.png" />yell0w.net</a>
-                    <a class="proj" href="" target="_blank"><img src="/assets/media/proto-eden.gif" />Coming Soon</a>
+                    <a class="proj" href="https://proto-eden.com/" target="_blank"
+                        ><img src="/assets/media/proto-eden.gif" />[PROTO EDEN]</a
+                    >
                     <div class="proj"><img src="/assets/media/absolutelynothing.png" /><span class="tiny">More to come...</span></div>
                 </div>
             </div>
@@ -74,7 +76,7 @@
                 <h2 class="textHeader">We continue to grow and create.</h2>
                 <p class="textParagraph">
                     With engaged communities rooting for us to create for them, our organization will continue to grow and change in ways we
-                    may never predict. <a href="https://forms.gle/87UkQE92hXFJfov88" target="_blank">Join us</a>, and help inform what's
+                    may never predict. <a href="https://forms.gle/87UkQE92hXFJfov88" target="_blank">Join us</a>, and help direct what's
                     next.
                 </p>
                 <p>
