--- a/legal.html
+++ b/legal.html
@@ -35,55 +35,38 @@
             </div>
         </header>
 
-        <!-- Home page, index.html -->
+        <!-- legal -->
         <main>
             <h1 id="introWords">
-                <p id="introLine1">Welcome to the</p>
-                <p id="introLine2">Theaceae Collective</p>
-                <p id="introLine3">We like to create and manage projects for communities you enjoy.</p>
+                <p id="introLine2">Legal Information</p>
             </h1>
 
             <div class="box">
-                <h2 class="textHeader">In the collective, we attract hobbyists who wish to provide for the community they're in.</h2>
-                <p class="textParagraph">
-                    Our serious debut started with <span class="italy">Porter Robinson Wiki</span>. A website created for showcasing modular
-                    wiki design and easy to use functionality unlike other wiki sites. Although we're just getting started, we're still
-                    proud to show what we have so far.
+                <h2 class="textHeader fullWidth">Notice!</h2>
+                <p class="textParagraph1 fullWidth">
+                    We are within NetroCorp's <a class="textParagraph1" href="https://netrocorp.net/terms">Terms of Service</a> and
+                    <a class="textParagraph1" href="https://netrocorp.net/privacy">Privacy Policy</a>.
                 </p>
-                <div class="projContainer">
-                    <a class="proj" href="https://potaro.wiki/" target="_blank"><img src="/assets/media/potaro.png" />potaro.wiki</a>
-                    <a class="proj" href="https://gardens.wiki/" target="_blank"><img src="/assets/media/gardens.png" />gardens.wiki</a>
-                    <div class="proj"><img src="/assets/media/absolutelynothing.png" /><span class="tiny">More to come...</span></div>
-                </div>
-            </div>
-
-            <div class="box oneHundredCigs">
-                <h2 class="textHeader">We also help start off personal projects.</h2>
-                <p class="textParagraph">
-                    We help make personal projects come to life by establishing connections with other developers and having a streamlined
-                    way of communication between our team members. We also provide a dirt cheap hosting service thanks to our partners at
-                    <a href="https://netrocorp.net/" target="_blank">Netro Corporation</a>.
+                <h2 class="textHeader fullWidth">Other Documents</h2>
+                <p class="textParagraph1 fullWidth">
+                    Theaceae Collective's <a class="textParagraph1" href="/tcpublic.html">Public Code License</a> and
+                    <a class="textParagraph1" href="/tcprivate.html">Private Code License</a>.
                 </p>
-                <div class="projContainer">
-                    <a class="proj" href="https://yell0w.net/" target="_blank"><img src="/assets/media/yellow.png" />yell0w.net</a>
-                    <a class="proj" href="https://proto-eden.com/" target="_blank"
-                        ><img src="/assets/media/proto-eden.gif" />[PROTO EDEN]</a
-                    >
-                    <div class="proj"><img src="/assets/media/absolutelynothing.png" /><span class="tiny">More to come...</span></div>
-                </div>
-            </div>
-
-            <div class="box oneHundredCigs">
-                <h2 class="textHeader">We continue to grow and create.</h2>
-                <p class="textParagraph">
-                    With engaged communities rooting for us to create for them, our organization will continue to grow and change in ways we
-                    may never predict. <a href="https://forms.gle/87UkQE92hXFJfov88" target="_blank">Join us</a>, and help direct what's
-                    next.
+                <!-- <p class="textParagraph fullWidth">
+                    Thank you for choosing Theaceae Collective ("Theaceae Collective"). These Terms of Service (the "Terms") outline the
+                    rules and regulations for the use of our Services (collectively, the "Services", which include but are not limited to
+                    website hosting, UI/UX design, and repository hosting). You agree that you are or thereof over the age of 13 or meet the
+                    minimum age required by the laws in your country. By accessing or interacting with our Services, we assume you accept
+                    the Terms in full. If you do not agree to the terms, do not request for our services.
                 </p>
-                <p>
-                    If you request our services, please E-Mail us at <a href="mailto:contact@theaceae.org">contact@theaceae.org</a>.
-                    Alternatively, fill out the <a href="https://forms.gle/u4zvoYiJvxnZhc9m6" target="_blank">Google Form</a>.
-                </p>
+                <h2 class="textHeader fullWidth">Use of Services</h2>
+                <p class="textParagraph fullWidth">
+                    Thank you for choosing Theaceae Collective ("Theaceae Collective"). These Terms of Service (the "Terms") outline the
+                    rules and regulations for the use of our Services (collectively, the "Services", which include but are not limited to
+                    website hosting, UI/UX design, and repository hosting). You agree that you are or thereof over the age of 13 or meet the
+                    minimum age required by the laws in your country. By accessing or interacting with our Services, we assume you accept
+                    the Terms in full. If you do not agree to the terms, do not request for our services.
+                </p> -->
             </div>
         </main>
 
