--- a/tcpublic.html
+++ b/tcpublic.html
@@ -35,54 +35,37 @@
             </div>
         </header>
 
-        <!-- Home page, index.html -->
+        <!-- Stuff -->
         <main>
             <h1 id="introWords">
-                <p id="introLine1">Welcome to the</p>
-                <p id="introLine2">Theaceae Collective</p>
-                <p id="introLine3">We like to create and manage projects for communities you enjoy.</p>
+                <p id="introLine2">TC-PUBLIC</p>
+                <p id="introLine3">Last updated 12/9/2025</p>
             </h1>
 
             <div class="box">
-                <h2 class="textHeader">In the collective, we attract hobbyists who wish to provide for the community they're in.</h2>
-                <p class="textParagraph">
-                    Our serious debut started with <span class="italy">Porter Robinson Wiki</span>. A website created for showcasing modular
-                    wiki design and easy to use functionality unlike other wiki sites. Although we're just getting started, we're still
-                    proud to show what we have so far.
+                <p class="textParagraph1 textHeader fullWidth">TC-PUBLIC: Theaceae Collective SOFTWARE/ASSETS LICENSE</p>
+                <p class="textParagraph1 fullWidth">Copyright (c) 2025 Theaceae Collective</p>
+                <p class="textParagraph1 fullWidth">
+                    THIS DOCUMENT IS A CONTRACT BETWEEN YOU AND THE THEACEAE COLLECTIVE ("Theaceae Collective"). BY DOWNLOADING OR USING OUR
+                    SOFTWARE/ASSETS ("Software"), YOU ACCEPT THIS LICENSE. IF YOU DO NOT AGREE TO ITS TERMS, DO NOT DOWNLOAD OR USE OUR
+                    SOFTWARE.
                 </p>
-                <div class="projContainer">
-                    <a class="proj" href="https://potaro.wiki/" target="_blank"><img src="/assets/media/potaro.png" />potaro.wiki</a>
-                    <a class="proj" href="https://gardens.wiki/" target="_blank"><img src="/assets/media/gardens.png" />gardens.wiki</a>
-                    <div class="proj"><img src="/assets/media/absolutelynothing.png" /><span class="tiny">More to come...</span></div>
-                </div>
-            </div>
-
-            <div class="box oneHundredCigs">
-                <h2 class="textHeader">We also help start off personal projects.</h2>
-                <p class="textParagraph">
-                    We help make personal projects come to life by establishing connections with other developers and having a streamlined
-                    way of communication between our team members. We also provide a dirt cheap hosting service thanks to our partners at
-                    <a href="https://netrocorp.net/" target="_blank">Netro Corporation</a>.
+                <p class="textParagraph1 fullWidth">
+                    You may copy, merge, publish, and distribute the Software and any modifications, but only for free. Commercial use,
+                    including selling, sublicensing, or other profit-driven activities, is prohibited without explicit written permission
+                    from the Theaceae Collective. Any distribution of our Software must include this LICENSE file, the above copyright
+                    notice, and all liability and warranty terms below.
                 </p>
-                <div class="projContainer">
-                    <a class="proj" href="https://yell0w.net/" target="_blank"><img src="/assets/media/yellow.png" />yell0w.net</a>
-                    <a class="proj" href="https://proto-eden.com/" target="_blank"
-                        ><img src="/assets/media/proto-eden.gif" />[PROTO EDEN]</a
-                    >
-                    <div class="proj"><img src="/assets/media/absolutelynothing.png" /><span class="tiny">More to come...</span></div>
-                </div>
-            </div>
-
-            <div class="box oneHundredCigs">
-                <h2 class="textHeader">We continue to grow and create.</h2>
-                <p class="textParagraph">
-                    With engaged communities rooting for us to create for them, our organization will continue to grow and change in ways we
-                    may never predict. <a href="https://forms.gle/87UkQE92hXFJfov88" target="_blank">Join us</a>, and help direct what's
-                    next.
+                <p class="textParagraph1 fullWidth">
+                    The Software is provided "AS IS" without warranties of any kind, express or implied, including but not limited to
+                    merchantability, non-infringement, or fitness for a particular purpose. The Theaceae Collective and its partners are not
+                    liable for any damages arising from the use or inability to use the Software, including but not limited to business or
+                    organization interruptions, drama, loss of profits, or other financial losses, even if advised of the possibility of
+                    such damages.
                 </p>
-                <p>
-                    If you request our services, please E-Mail us at <a href="mailto:contact@theaceae.org">contact@theaceae.org</a>.
-                    Alternatively, fill out the <a href="https://forms.gle/u4zvoYiJvxnZhc9m6" target="_blank">Google Form</a>.
+                <p class="textParagraph1 fullWidth">
+                    If you would like to use our Software for a commercial purpose, please connect with our owners at
+                    <a class="textParagraph1" href="mailto:hello@netrocorp.net">hello@netrocorp.net</a>.
                 </p>
             </div>
         </main>
