link to newspost instead

--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
                 </p>
                 <div class="projContainer">
                     <a class="proj" href="https://potaro.wiki/" target="_blank"><img src="/assets/media/potaro.png" />potaro.wiki</a>
-                    <a class="proj" href="https://gardens.wiki/" target="_blank"><img src="/assets/media/gardens.png" />gardens.wiki</a>
+                    <a class="proj" href="https://alpha.potaro.wiki/news/gardens-wiki" target="_blank"
+                        ><img src="/assets/media/gardens.png" />gardens.wiki</a
+                    >
                     <div class="proj"><img src="/assets/media/absolutelynothing.png" /><span class="tiny">More to come...</span></div>
                 </div>
             </div>
